# CRMWolf

./: .coverage  .gitignore  AGENTS.md  Apifox私有化试用License-广东智通人才连锁股份有限公司_20260706.docx  CLAUDE.md  CONTRIBUTING.md  README.md  diagnosis-plan.md  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  navigation-problems.html  navigation-redesign-v2.html  navigation-redesign-v3.html  navigation-redesign.html  task-5-report.md  test_follow_up_update_fix.py  test_permissions.sh
CRM-Server/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  check_user_team.py  diagnose_license_approval_flow.py  diagnose_license_submit.py  entrypoint.sh  pyproject.toml  requirements.txt  run.sh  test_agent_direct.py  test_frontend_migration.py  test_leads.py  verify_agent.py
CRM-Server/.apifox/: ai-branches.json
CRM-Server/app/: main.py
CRM-Server/docs/: 采购方式批量更新接口使用文档.md
CRM-Server/migrations/: 001_add_name_norm_column.sql  001_add_name_norm_column_mysql.sql  add_ai_action_params_table.py  add_ai_skill_tables.py  add_customer_profile_fields.py  add_industry_hierarchy.py  add_procurement_fields.py  add_return_fields.py  add_team_architecture.py  add_team_isolation_phase1.py  add_team_to_user_roles.py  create_ai_config_tables.py  create_api_key_tables.py  env.py  init_industries.sql  init_industries_full.sql  init_industries_mysql.sql  init_procurement_data.py  remove_contact_phone_unique.py  run_migration_001.py  update_opportunity_pricing_fields.py
CRM-Server/run/: run_mysql.sh  run_redis.sh
CRM-Server/scripts/: add_customer_source_field.py  add_next_action_field.py  add_next_action_to_skill.py  assign_role.py  assign_role_permissions.py  backfill_name_norm.py  check_admin_permissions.py  check_approval_records.py  check_approval_tables.py  check_director_permissions.py  check_foreign_keys.py  check_glue_compliance.py  check_leads.py  check_owners.py  check_permission_mapping.py  check_permissions.py  check_tables.py  check_team_isolation.py  check_user_9.py  check_users_directly.py  clean_test_data.py  cleanup_business_data.py  cleanup_payment_data.py  create_operation_logs_table.py  debug_permissions.py  deprecate_old_stage_permissions.py  diagnose_customer_profile.py  fix_contract_status.py  fix_converted_leads.py  fix_lead_status.py  fix_missing_permissions.py  fix_orphaned_leads.py  fix_payment_approval_id.py  fix_procurement_tables.py  init_db.py  init_openapi_permissions.py  init_opportunity_stages.py  init_procurement_permissions.py  init_scores.py  migrate_accounts_to_customers.py  (+28 more)
CRM-Server/tests/: test_ai_conversation_schema.py  test_approval_workflow.py  test_auto_win_on_100_percent.py  test_claim_fix.py  test_claim_simple.py  test_contract_by_opportunity.py  test_contract_creator_info.py  test_contract_from_opportunity.py  test_contracts.py  test_customer_assign.py  test_customer_follow_ups.py  test_customer_list_with_info.py  test_customer_return.py  test_customers.py  test_finance_features.py  test_invoice_management.py  test_leads.py  test_list_api_simple.py  test_mark_win_with_stage.py  test_opportunities.py  (+19 more)
(+1485 files in other folders)
