[project]
name = "crmwolf"
version = "1.0.0"
requires-python = ">=3.11"
description = "CRMWolf Customer Relationship Management System"

# ===== 依赖 =====
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "python-multipart==0.0.12",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "pymysql==1.1.2",
    "cryptography==46.0.3",
    "redis==7.1.0",
    "hiredis==3.3.0",
    "async-timeout==5.0.1",
    "email-validator==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-redis>=4.6.0",
]

# ===== Ruff 配置（Python Lint） =====
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "ANN",    # flake8-annotations（类型注解）
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "ANN"]
"app/api/*" = ["ANN401"]  # API 响应类型注解

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ===== MyPy 配置（类型检查） =====
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

# ===== Pytest 配置 =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --cov=app --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
asyncio_mode = "auto"

# ===== Coverage 配置 =====
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/main.py",
    "app/core/config.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ===== Black 配置（可选） =====
[tool.black]
line-length = 120
target-version = ["py311"]

# ===== 配置锁定说明 =====
# 修改此文件需要人工审批
# 禁止 AI Agent 自行修改 strict 相关配置